fixed dark mode about page

--- a/components/about/ourResults/style.module.scss
+++ b/components/about/ourResults/style.module.scss
@@ -4,6 +4,22 @@
    padding: spacing(section-primary-padding);
    padding-bottom: 1rem;
 
+   &.ourResultsDark {
+    background-color: color(input-bg);
+    color: color(primary-white);
+
+    .ourResultsTitle {
+      color: color(primary-white);
+    }
+
+    .resultCardWrapper {
+      .resultCard {
+        background-color: color(text-primary);
+        border: 1px solid rgba(color(primary-white), 0.12);
+      }
+    }
+  }
+
    .ourResultsTitle {
       color: color(text-primary);
       text-transform: uppercase;
