--- a/components/about/ourValues/style.module.scss
+++ b/components/about/ourValues/style.module.scss
@@ -5,7 +5,7 @@
   background-color: color(bg-soft);
 
   &.ourValuesDark {
-    background-color: color(input-bg);
+    background-color: color(dark-bg);
     color: color(primary-white);
 
     .ourValuesHead {
